--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm install
 
       - name: Build Angular App
-        run: npm run build -- --prod
+        run: npm run build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
