Issue #0000 fix: c4gt tickets

--- a/.github/ISSUE_TEMPLATE/c4gt_community.yml
+++ b/.github/ISSUE_TEMPLATE/c4gt_community.yml
@@ -79,6 +79,7 @@ body:
         - SamagraX
         - ShikshaLokam
         - Tech4Dev
+        - Tekdi
         - Tibil
     validations:
       required: true
