--- a/src/config/url.config.json
+++ b/src/config/url.config.json
@@ -1,17 +1,17 @@
 {
     "URLS": {
     
-        "GET_STORIES_URL": "v1/collection",
-        "DELETE_COLLECTION_URL":"v1/collection",
-        "EDIT_STORY_URL": "v1/collection",
-        "GET_WORD_SENTENCE_LIST" : "v1/content",
-        "DELETE_WORD_SENTENCE_URL" : "v1/content",
-        "CREAT_WORD_SENTENCE_URL" : "v1/content",
+        "GET_STORIES_URL": "content-service/v1/collection",
+        "DELETE_COLLECTION_URL":"content-service/v1/collection",
+        "EDIT_STORY_URL": "content-service/v1/collection",
+        "GET_WORD_SENTENCE_LIST" : "content-service/v1/content",
+        "DELETE_WORD_SENTENCE_URL" : "content-service/v1/content",
+        "CREAT_WORD_SENTENCE_URL" : "content-service/v1/content",
         "GET_AUTHORING_CONFIG" :  "auth/getAllConfig",
         "CREATE_AUTHORING_CONFIG" :  "auth/createAuthConfig",
         "EDIT_AUTHORING_CONFIG" : "auth/createAuthConfig",
-        "GET_VIRTUAL_ID": "/api/virtualId/generateVirtualID",
-        "GET_TARGETS" : "/lais/scores/GetTargets/user",
-        "GET_FAMILIARITY" :"/lais/scores/GetFamiliarity/user"
+        "GET_VIRTUAL_ID": "api/virtualId/generateVirtualID",
+        "GET_TARGETS" : "lais/scores/GetTargets/user",
+        "GET_FAMILIARITY" :"lais/scores/GetFamiliarity/user"
     }
 }
